tweaks to css creation for upper part of timeline control (where is entry text displayed) - removed some reduntant spacing, reduced text size, fixed bug with distribution between image/text area so it will display properly.

--- a/source/less/Typography.less
+++ b/source/less/Typography.less
@@ -13,7 +13,7 @@
 		font-size: @base-font;
 		font-weight: normal;
 		line-height: @base-line;
-		margin-bottom: @base-line;
+		//margin-bottom: @base-line;
 		color: @color-feature-description;
 		
 		small {
@@ -31,7 +31,7 @@
 	}
 	.feature {
 		h3, h4, h5, h6 {
-			margin-bottom: @base-space;
+			margin-bottom: 5px;//@base-space;
 		}
 		p {
 			color: @color-feature-description;
@@ -110,7 +110,7 @@
 		}
 	}
 	h3 {
-		font-size: 28px;
+		font-size: 22px;
 		line-height: 30px;
 		//font-size: 24px;
 		//line-height:26px;
