--- a/source/less/VMM.Slider.less
+++ b/source/less/VMM.Slider.less
@@ -187,8 +187,8 @@
 				display:table;
 				vertical-align:middle;
 				.text {
-					width:40%;
-					max-width:50%;
+					width:100%;
+					max-width:70%;
 					min-width:120px;
 					display:table-cell;
 					vertical-align:middle;
@@ -276,7 +276,7 @@
 								text-align:center;
 								background:@color-background;
 								//margin-top: 50%;
-								font-size: 28px;
+								font-size: 22px;
 								font-weight: bold;
 								text-transform: uppercase;
 							}
